--- a/frontend-assignment/src/Pages/Dashboard/Dashboard.module.css
+++ b/frontend-assignment/src/Pages/Dashboard/Dashboard.module.css
@@ -1,17 +1,66 @@
-.MainContainer{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.MainContainer {
   width: 100%;
-  height:auto;
+  height: auto;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;  
+  justify-content: space-between;
 }
-.sidebar{
-    width: 18%;
-    height: 100vh;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+.sidebar {
+  width: 18%;
+  height: 100vh;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-.dashboard{
-    width: 81%;
-    height: 100vh;
-    border: 1px solid black;
+.dashboard {
+  width: 81%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding-top: 20px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.headerTab {
+  height: 23%;
+  width: 100%;
+  border-radius: 8px;
+}
+.repoTab {
+  height: 74%;
+  width: 100%;
+  border-radius: 8px;
+}
+.navbar {
+  display: none;
+}
+@media (max-width: 768px) {
+  .navbar {
+    display: block;
+    width: 100%;
+    height: 45px;
+    position: fixed;
+    z-index: 10000;
+    background-color: #fff;
+    border-bottom: 1px solid rgb(221, 220, 220);
+  }
+  .sidebar {
+    display: none;
+  }
+  .dashboard {
+    width: 100%;
+  }
+  .repoTab {
+    height: auto;
+    /* margin-top: 45px; */
+  }
+  .headerTab {
+    margin-top: 30px;
+    height: 180px;
+  }
 }
